--- a/display.html
+++ b/display.html
@@ -7,22 +7,13 @@
     <style>
         .room{
             width: 400px;
-            height: 145px;
+            height: 150px;
             border: 3px solid chartreuse;
             margin: 10px;
-            display: inline;
-        }
-        h3, p{
-            display: inline;
+            display: inline-block;
         }
         h1{
             background-color: chartreuse;
-        }
-        li{
-            display: inline;
-        }
-        a{
-            display:block; 
         }
     </style>
 </head>
@@ -38,19 +29,19 @@
     </ul>
     <section class="container">
       <div class="room">
-          <h3>rome-1</h3>
+          <h2>rome-1</h2>
           <p>Room owned by-1</p>
       </div>
       <div class="room">
-          <h3>rome-2</h3>
+          <h2>rome-2</h2>
           <p>Room owned by-2</p>
       </div>
       <div class="room">
-          <h3>rome-3</h3>
+          <h2>rome-3</h2>
           <p>Room owned by-3</p>
       </div>
       <div class="room">
-          <h3>rome-4</h3>
+          <h2>rome-4</h2>
           <p>Room owned by-4</p>
       </div>
     </section>
